<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#14e7e7e7"
    android:orientation="vertical"
    android:padding="6dp"
    tools:context=".WorkshopActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="6dp"
        android:background="#FFF"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/emblem"
            android:scaleType="fitStart"
            android:src="@drawable/emblem" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/workshop_booking"
            android:textColor="#ff1c1c"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/cris_logo"
            android:scaleType="fitEnd"
            android:src="@drawable/cris" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:padding="2dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <TextView
            style="@style/coachNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coach" />

        <TextView
            android:id="@+id/coach_number"
            style="@style/coachNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            tools:text="@string/coach_number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/take_input_form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/defaultTexts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/maintenance_depot" />

            <TextView
                android:id="@+id/maintenance_depot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/defaultTexts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/poh" />

            <TextView
                android:id="@+id/poh"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/defaultTexts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/p_date" />

            <TextView
                android:id="@+id/p_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/defaultTexts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/r_date" />

            <TextView
                android:id="@+id/r_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/defaultTexts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ioh_date" />

            <TextView
                android:id="@+id/ioh_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/defaultTexts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/shop" />

            <TextView
                android:id="@+id/shop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/defaultTexts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reason" />

            <Spinner
                android:id="@+id/reason_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/defaultTexts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/booking_date_time" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text=""
                android:id="@+id/cal_textview" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/calender_image"
                android:id="@+id/cal_image"
                android:src="@drawable/cal" />

        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/scheduling_remark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/remark"
                android:inputType="textAutoCorrect"
                android:maxLength="200"
                android:maxLines="4" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/submit"
            style="@style/buttonPrimary"
            android:layout_width="150dp"
            android:layout_gravity="center"
            android:text="@string/submit" />

    </LinearLayout>

</LinearLayout>