<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#14e7e7e7"
    android:orientation="vertical"
    android:padding="6dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="6dp"
        android:background="#FFF"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/emblem"
            android:scaleType="fitStart"
            android:src="@drawable/emblem" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/workshop_booking"
            android:textColor="#ff1c1c"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/cris_logo"
            android:scaleType="fitEnd"
            android:src="@drawable/cris" />
    </LinearLayout>

    <Button
        android:id="@+id/workshop_boking"
        style="@style/buttonPrimary"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:text="@string/workshop_booking"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/take_input_form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/defaultTexts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/owning_railway" />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/owning_railway_list" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/coach_number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/coach_number"
                android:inputType="number"
                android:maxLength="5"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/find_coach"
            style="@style/buttonPrimary"
            android:layout_width="150dp"
            android:layout_gravity="center"
            android:text="@string/find_coach" />


    </LinearLayout>
</LinearLayout>